--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
   "license": "ISC",
   "author": "parth agrawal",
   "type": "module",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start":"node src/index.js",
+    "dev":"nodemon src/index.js"
   },
   "dependencies": {
     "express": "^5.1.0",
-    "mongoose": "^8.15.1",
-    "nodemon": "^3.1.10"
+    "mongoose": "^8.15.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10",
+    "prettier": "^3.5.3"
   }
 }
